# entity-component-system

./: .git-blame-ignore-revs  CMakeLists.txt  conanfile.py
benchmarks/: CMakeLists.txt  main.cpp  thread_pool_benchmark.cpp
cmake/: conan_setup.cmake  install.cmake
example/: CMakeLists.txt  main.cpp
include/inexor/ecs/: entity.hpp  system.hpp  thread_pool.hpp  world.hpp
src/: CMakeLists.txt
src/ecs/: ecs.cpp  thread_pool.cpp
tests/: CMakeLists.txt  main.cpp
